--- a/index-START.html
+++ b/index-START.html
@@ -50,7 +50,12 @@
 				const xWalk = Math.round((x / width) * walk - walk / 2);
 				const yWalk = Math.round((y / height) * walk - walk / 2);
 
-				text.style.textShadow = `${xWalk}px ${yWalk}px 0 red`;
+				text.style.textShadow = `
+				${xWalk}px ${yWalk}px 0 rgba(206,69,255, 0.6),
+				${xWalk * -1}px ${yWalk}px 0 rgba(15,91,255, 0.6),
+				${yWalk}px ${xWalk * -1}px 0 rgba(0,208,67, 0.6),
+				${yWalk * -1}px ${xWalk}px 0 rgba(255,248,42, 0.6)
+				`;
 			}
 
 			hero.addEventListener('mousemove', shadow);
